fixed broken links and attribution

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="content">
 							<p>Curently doing my masters studies in the in the Visual Computing & Applied Geometry lab at Tel-Aviv University, Supervised by Dr. Amit H. Bermano. Interested in video & 3D geometric applications of deep learning. I've earned my Bachleors in Electric Engineering & Physics at Tel-Aviv University where I focused on computer architecture, semi-conductors and optics.</p>
 							<p>I'm also quite an experienced embedded software engineer - I worked in Valens Semiconductors, and in ART medical for a couple of years mainly implementing all sorts of algorithms in the firmware using C/C++.</p> 
-							<p>Most importantly, I'm a huge tech savvy geek, and I'm passionte about many engineering topics such as: game engines, physically based rendering, projection mapping, procedural generation programming, and many more..</p>                 
+							<p>More importantly, I'm a huge tech savvy geek, and passionte about many engineering topics such as: game engines, physically based rendering, projection mapping, procedural generation programming, and many more..</p>                 
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
@@ -147,8 +147,8 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Exploration of Deep Mesh Denoising</h3>
 									<p> My colleagues and I submitted a project for the course "Advanced Deep Learning" run by Prof. Amir Globerzon @ TAU. I think we had a great opportunity to discover and research some hot topics in 3D machine learning.</p>
-									<p> Exploration of Deep Mesh Denoising / Amir Barda & Yotam Erel & Mattan Serry</p>
-									<a href="assets/pdf/deep_mesh_denoising.png">Workshop paper</a></br>
+									<p> Exploration of Deep Mesh Denoising / Amir Barda, Mattan Serry, Yotam Erel</p>
+									<a href="assets/pdf/deep_mesh_denoising.pdf">Workshop paper</a></br>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
                         </div><!--//content-->  
