removed workshop pdf and reference

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 									</p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
+							<!--
 							<div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="assets/images/deep_mesh_denoiser.png" target="_blank">
 									<img class="img-responsive project-image" src="assets/images/deep_mesh_denoiser.png"/>
@@ -149,8 +150,8 @@
 									<p> My colleagues and I submitted a project for the course "Advanced Deep Learning" run by Prof. Amir Globerzon @ TAU. I think we had a great opportunity to discover and research some hot topics in 3D machine learning.</p>
 									<p> Exploration of Deep Mesh Denoising / Amir Barda, Mattan Serry, Yotam Erel</p>
 									<a href="assets/pdf/deep_mesh_denoising.pdf">Workshop paper</a></br>
-                                </div><!--//desc-->                          
-                            </div><!--//item-->
+                                </div>                         
+                            </div>-->
                         </div><!--//content-->  
                     </div><!--//section-inner-->
                 </section><!--//section-->
