--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Yotam Erel" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Yotam Erel" />
             <div class="profile-content pull-left">
                 <h1 class="name">Yotam Erel</h1>
             </div><!--//profile-->
