--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
 							<p>Curently doing my masters studies in the in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by Dr. Amit H. Bermano. Interested in video & 3D geometric applications of deep learning. I've earned my bachelor's in Electric Engineering & Physics at Tel-Aviv University where I focused on computer architecture, semi-conductors and optics.</p>
-							<p>I'm also quite an experienced embedded software engineer - I worked in Valens Semiconductors, and in ART medical for a couple of years mainly implementing all sorts of algorithms in the firmware using C/C++.</p> 
+							<p>I'm also quite an experienced embedded software engineer - I worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a href="https://artmedical.com/">ART medical</a> for a couple of years mainly implementing all sorts of algorithms in the firmware using C/C++.</p> 
 							<p>More importantly, I'm a huge geek, and passionte about many engineering topics such as: brain-computer interfaces, game engines, physically based rendering, projection mapping, procedural generation programming, and many more..</p>                 
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
