--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Video-based motion-resilient reconstruction of 3D position for functional near-infrared spectroscopy and electroencephalography head mounted probes</h3>
-                                    <p>Neuro-Photonics, 2020 / Sagi Jaffe-Dax, Amit H. Bermano, Yotam Erel, Lauren L. Emberson.</p>
+                                    <p>Neurophotonics, 2020 / Sagi Jaffe-Dax, Amit H. Bermano, Yotam Erel, Lauren L. Emberson.</p>
 									<a href="https://www.spiedigitallibrary.org/journals/neurophotonics/volume-7/issue-03/035001/Video-based-motion-resilient-reconstruction-of-three-dimensional-position-for/10.1117/1.NPh.7.3.035001.full?SSO=1"> Paper </a></br>
                                     <a href="https://www.biorxiv.org/content/10.1101/621615v2.full"> BioRxiv </a></br>
 									<a href="https://github.com/yoterel/Reconstruction-of-3D-probe-positions-for-fNIRS"> Code </a>
