--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Corona Inspired rendering in pbrt</h3>
-									<p> I've been reading the fantastic book <a href="http://www.pbr-book.org/3ed-2018/contents.html">Physically Based Rendering</a> written by Matt Pharr, Wenzel Jakob and Greg Humphreys. By adjusting the source code a bit I implemented a sphere tracer following <a href="http://graphics.stanford.edu/courses/cs348b/article/5">this</a>. I rendered some interesting scenes, Check them out!</p>
+									<p> I've been reading the fantastic book <a href="http://www.pbr-book.org/3ed-2018/contents.html">Physically Based Rendering</a> written by Matt Pharr, Wenzel Jakob and Greg Humphreys. By adjusting the source code a bit I implemented a sphere tracer following <a href="http://graphics.stanford.edu/courses/cs348b/article/5">this</a>. I rendered some interesting scenes, check them out!</p>
                                     <p>
 									<a class="col-md-3 col-sm-3 col-xs-12" href="assets/images/hospital.png" target="_blank">
 									<img class="img-responsive project-image" src="assets/images/hospital.png"/>
