added meshcnn fundamental forms

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-							<p>Curently doing my masters studies in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by Dr. Amit H. Bermano. Interested in video & 3D geometric applications of deep learning. I've earned my bachelor's in Electric Engineering & Physics at Tel-Aviv University where I focused on computer architecture, semi-conductors and optics.</p>
-							<p>I'm also an experienced embedded software engineer - I worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a href="https://artmedical.com/">ART medical</a> for a couple of years mainly implementing all sorts of algorithms in the firmware using C/C++.</p> 
+							<p>Curently doing my phd studies in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by Dr. Amit H. Bermano. Interested in video & 3D geometric applications of deep learning. I've earned my bachelor's in Electric Engineering & Physics at Tel-Aviv University where I focused on computer architecture, semi-conductors and optics.</p>
+							<p>I'm also an experienced embedded software engineer - I worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a href="https://artmedical.com/">ART medical</a> for a couple of years mainly implementing all sorts of algorithms for their firmware using C/C++.</p> 
 							<p>More importantly, I'm a huge geek, and passionte about many engineering topics such as: brain-computer interfaces, game engines, physically based rendering, projection mapping, procedural generation programming, and many more..</p>                 
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -81,6 +81,18 @@
                                                
                             
                             <hr class="divider" />
+							<div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://arxiv.org/abs/2105.13277" target="_blank">
+                                <img class="img-responsive project-image vertical-spacer" src="assets/images/meshcnn_fund_froms.png" alt="MeshCNN Fundamentals" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">MeshCNN Fundamentals: Geometric Learning through a Reconstructable Representation</h3>
+                                    <p>preprint, 2021 / Amir Barda, Yotam Erel, Amit H. Bermano.</p>
+                                    <a href="https://arxiv.org/abs/2105.13277"> arXiv </a></br>
+									<a href=""> Code - coming soon!</a>
+                                    <p></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.biorxiv.org/content/10.1101/2020.12.29.424683v2" target="_blank">
                                 <img class="img-responsive project-image vertical-spacer" src="assets/images/storm.png" alt="STORM-Net" />
