--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-							<p>Curently doing my phd studies in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by Dr. Amit H. Bermano. Interested in Graphics, Video & 3D geometric applications of deep learning.</p>
+							<p>Curently doing my phd studies in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by <a href="https://www.cs.tau.ac.il/~amberman/"> Dr. Amit H. Bermano</a>. Interested in Graphics, Video & 3D geometric applications of deep learning.</p>
 							<p>Bachelor's from Faculty of Electric Engineering & Faculty of Exact Sciences (Physics) at Tel-Aviv University where I focused on semi-conductors, computer architecture and optics.</p>
 							<p>Masters from Faculty of Electric Engineering & School of Computer Science at Tel-Aviv University, under super vision by Dr. Amit H. Bermano and Prof. Daniel Cohen-Or (mostly computer-vision projects)</p>
 							<p>I also worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a href="https://artmedical.com/">ART medical</a> for a couple of years mainly implementing all sorts of algorithms for their firmware using C/C++.</p> 
@@ -65,7 +65,7 @@
 
                 <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">News</h2>
+                        <h2 class="heading">Updates</h2>
                         <div class="content">
                         <ul style="padding-left:20px">
 							<li><i>10/2021:</i> I took the teaching assistant position in the workshop "Applications of Deep Learning in Computer Graphics" @ School of Computer Science, Tel-Aviv University.</li>
@@ -146,7 +146,22 @@
                     </div><!--//section-inner-->
 					<div class="section-inner">
                         <h2 class="heading">Projects</h2>
-						
+						<h4 class="heading">2022</h4>
+                        <div class="content">
+							<hr class="divider" />
+							<div class="item row">
+								<a class="col-md-4 col-sm-4 col-xs-12" href="assets/images/splash.png" target="_blank">
+									<img class="img-responsive project-image" src="assets/images/splash.png", alt="Deep Mesh Denoiser" />
+								</a>
+								<div class="desc col-md-8 col-sm-8 col-xs-12">
+									<h3 class="title">CLEVR-ER</h3>
+									<p> David Nukari & I made an extension of the CLEVR dataset for supporting relationships between objects. It also introduces liquid relationships! which was fun playing with. We submitted this as a final project for the 3d Graphics & printing course given by Dr. Amit Bermano @ TAU.</p>
+									<p> CLEVR-ER / David Nukari & Yotam Erel</p>
+									<a href="https://github.com/yoterel/CLEVR-ER"> Code </a></br>
+									<a href="assets/pdf/CLEVR-ER.pdf"> Slides </a></br>
+								</div>   <!--//desc-->                       
+							</div><!--//item-->
+						</div><!--//content-->  
                         <h4 class="heading">2020</h4>
                         <div class="content">
                             <hr class="divider" />
