adds fnirs 2022 slides

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-							<p>Curently doing my phd studies in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by <a href="https://www.cs.tau.ac.il/~amberman/"> Dr. Amit H. Bermano</a>. Interested in Graphics, Video & 3D geometric applications of deep learning.</p>
+							<p>I am a phd candidate in the Visual Computing & Applied Geometry lab at Tel-Aviv University, supervised by <a href="https://www.cs.tau.ac.il/~amberman/"> Dr. Amit H. Bermano</a>. Interested in computer graphics, video & 3D geometric applications of deep learning.</p>
 							<p>Bachelor's from Faculty of Electric Engineering & Faculty of Exact Sciences (Physics) at Tel-Aviv University where I focused on semi-conductors, computer architecture and optics.</p>
 							<p>Masters from Faculty of Electric Engineering & School of Computer Science at Tel-Aviv University, under super vision by Dr. Amit H. Bermano and Prof. Daniel Cohen-Or (mostly computer-vision projects)</p>
 							<p>I also worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a href="https://artmedical.com/">ART medical</a> for a couple of years mainly implementing all sorts of algorithms for their firmware using C/C++.</p> 
-							<p>More importantly, I am fascinated by: brain-computer interfaces, game engines, physically based rendering, projection mapping, AR/VR, procedural generation programming. I also like hiking and bird watching :)</p>                 
+							<p>More importantly, I am fascinated by: brain-computer interfaces, game engines, physically based rendering and inverse rendering, projection mapping, AR/VR, procedural generation programming. I also like hiking and bird watching :)</p>                 
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
@@ -75,7 +75,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">iCatcher+: Robust and automated annotation of infant gaze from videos collected in the lab and online</h3>
-									<p>preprint, 2022 /  Yotam Erel, Kat Adams Shannon, Kim Scott, Peng Cao, Xincheng Tan, Peter K Hart, Melissa Kline Struhl, Junyi Chu, Gal Raz, Sabrina Piccolo, Catherine Mei, Christine Potter, Sagi Jaffe-Dax, Casey Lew-Williams, Joshua Tenenbaum, Katherine Fairchild, Amit Bermano, Shari Liu </p>
+									<p>preprint, 2022 /  Yotam Erel, Kat Adams Shannon, Junyi Chu, Kim Scott, Melissa Kline Struhl, Peng Cao, Xincheng Tan, Peter K Hart, Gal Raz, Sabrina Piccolo, Catherine Mei, Christine Potter, Sagi Jaffe-Dax, Casey Lew-Williams, Joshua Tenenbaum, Katherine Fairchild, Amit Bermano, Shari Liu </p>
                                     <p>We took iCatcher and improved it in terms of robustness and accuracy.</p>
 									<a href="https://psyarxiv.com/up97k"> PsyArXiv </a></br>
 									<a href="https://github.com/yoterel/icatcher_plus"> Code </a>
@@ -121,7 +121,8 @@
                                     <h3 class="title">STORM-Net: Simple and Timely Optode Registration Method for Functional Near-Infrared Spectroscopy (fNIRS)</h3>
                                     <p>preprint, 2021 / Yotam Erel, Sagi Jaffe-Dax, Yaara Yeshurun, Amit H. Bermano.</p>
                                     <a href="https://www.biorxiv.org/content/10.1101/2020.12.29.424683v3"> BioRxiv </a></br>
-									<a href="https://github.com/yoterel/STORM-Net"> Code </a>
+									<a href="https://github.com/yoterel/STORM-Net"> Code </a><br>
+									<a href="assets/pdf/fnirs2022.pdf"> fnirs 2022 slides </a>
                                     <p></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
@@ -187,7 +188,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Corona Inspired rendering in pbrt</h3>
-									<p> I've been reading the fantastic book <a href="http://www.pbr-book.org/3ed-2018/contents.html">Physically Based Rendering</a> written by Matt Pharr, Wenzel Jakob and Greg Humphreys. By adjusting the source code a bit I implemented a sphere tracer following <a href="http://graphics.stanford.edu/courses/cs348b/article/5">this</a>. I rendered some interesting scenes, check them out!</p>
+									<p> I've been reading the fantastic book <a href="http://www.pbr-book.org/3ed-2018/contents.html">Physically Based Rendering</a> written by Matt Pharr, Wenzel Jakob and Greg Humphreys. By adjusting the source code a bit to become a sphere tracer. I rendered some interesting scenes, check them out!</p>
                                     <p>
 									<a class="col-md-3 col-sm-3 col-xs-12" href="assets/images/hospital.png" target="_blank">
 									<img class="img-responsive project-image" src="assets/images/hospital.png"/>
