--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">iCatcher+: Robust and automated annotation of infant gaze from videos collected in the lab and online</h3>
-									<p>preprint, 2022 /  Yotam Erel, Kat Adams Shannon, Junyi Chu, Kim Scott, Melissa Kline Struhl, Peng Cao, Xincheng Tan, Peter K Hart, Gal Raz, Sabrina Piccolo, Catherine Mei, Christine Potter, Sagi Jaffe-Dax, Casey Lew-Williams, Joshua Tenenbaum, Katherine Fairchild, Amit Bermano, Shari Liu </p>
-                                    <p>We took iCatcher and improved it in terms of robustness and accuracy.</p>
+									<p>Advances in Methods and Practices in Psychological Science, 2023 /  Yotam Erel, Katherine Adams Shannon, Junyi Chu, Kim Scott, Melissa Kline Struhl, Peng Cao, Xincheng Tan, Peter Hart, Gal Raz, Sabrina Piccolo, Catherine Mei, Christine Potter, Sagi Jaffe-Dax, Casey Lew-Williams, Joshua Tenenbaum, Katherine Fairchild, Amit Bermano, Shari Liu </p>
+                                    <p>A more robust and validated version of iCatcher.</p>
+									<a href="https://doi.org/10.1177/25152459221147250"> Paper </a></br>
 									<a href="https://psyarxiv.com/up97k"> PsyArXiv </a></br>
 									<a href="https://github.com/yoterel/icatcher_plus"> Code </a>
                                     <p></p>
@@ -95,7 +96,7 @@
                                     <h3 class="title">iCatcher: A Neural Network Approach for Automated Coding of Young Children’s Eye Movements</h3>
                                     <p>preprint, 2021 / Erel, Y., Potter, C.E., Jaffe-Dax, S., Lew-Williams, C., & Bermano, A.</p>
 									<p>A cool application of automated eyetracking to the field of children psychology research, we turned the project from a year ago into a paper.</p>
-                                    <a href="https://doi.org/10.1111/infa.12468"> Paper </a>
+                                    <a href="https://doi.org/10.1111/infa.12468"> Paper </a></br>
 									<a href="https://psyarxiv.com/6ysu9/"> PsyArXiv </a></br>
 									<a href="https://github.com/yoterel/iCatcher"> Code </a>
                                     <p></p>
