--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
                <section class="latest section">
                     <div class="section-inner">
                         <h2 class="heading">Publications</h2>
+                        <h4 class="heading">2023</h4>
+                        <div class="content">
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://yoterel.github.io/nepmap-project-page/" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/nepmap_teaser.png" alt="nepmap" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">Neural Projection Mapping Using Reflectance Fields</h3>
+									<p>Preprint, 2023 / Yotam Erel, Daisuke Iwai and Amit Bermano</p>
+									<a href="https://yoterel.github.io/nepmap-project-page/"> Project Page </a></br>
+									<a href="https://arxiv.org/abs/2306.06595"> ArXiv </a></br>
+									<a href="https://github.com/yoterel/nepmap"> Code </a>
+                                    <p></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+                        </div><!--//content-->  
 						<h4 class="heading">2022</h4>
                         <div class="content">
                             <hr class="divider" />
@@ -76,7 +93,6 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">iCatcher+: Robust and automated annotation of infant gaze from videos collected in the lab and online</h3>
 									<p>Advances in Methods and Practices in Psychological Science, 2023 /  Yotam Erel, Katherine Adams Shannon, Junyi Chu, Kim Scott, Melissa Kline Struhl, Peng Cao, Xincheng Tan, Peter Hart, Gal Raz, Sabrina Piccolo, Catherine Mei, Christine Potter, Sagi Jaffe-Dax, Casey Lew-Williams, Joshua Tenenbaum, Katherine Fairchild, Amit Bermano, Shari Liu </p>
-                                    <p>A more robust and validated version of iCatcher.</p>
 									<a href="https://doi.org/10.1177/25152459221147250"> Paper </a></br>
 									<a href="https://psyarxiv.com/up97k"> PsyArXiv </a></br>
 									<a href="https://github.com/yoterel/icatcher_plus"> Code </a>
@@ -94,8 +110,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">iCatcher: A Neural Network Approach for Automated Coding of Young Children’s Eye Movements</h3>
-                                    <p>preprint, 2021 / Erel, Y., Potter, C.E., Jaffe-Dax, S., Lew-Williams, C., & Bermano, A.</p>
-									<p>A cool application of automated eyetracking to the field of children psychology research, we turned the project from a year ago into a paper.</p>
+                                    <p>Preprint, 2021 / Erel, Y., Potter, C.E., Jaffe-Dax, S., Lew-Williams, C., & Bermano, A.</p>
                                     <a href="https://doi.org/10.1111/infa.12468"> Paper </a></br>
 									<a href="https://psyarxiv.com/6ysu9/"> PsyArXiv </a></br>
 									<a href="https://github.com/yoterel/iCatcher"> Code </a>
@@ -109,7 +124,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">MeshCNN Fundamentals: Geometric Learning through a Reconstructable Representation</h3>
-                                    <p>preprint, 2021 / Amir Barda, Yotam Erel, Amit H. Bermano.</p>
+                                    <p>Preprint, 2021 / Amir Barda, Yotam Erel, Amit H. Bermano.</p>
                                     <a href="https://arxiv.org/abs/2105.13277"> arXiv </a></br>
                                     <p></p>
                                 </div><!--//desc-->                          
@@ -120,7 +135,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">STORM-Net: Simple and Timely Optode Registration Method for Functional Near-Infrared Spectroscopy (fNIRS)</h3>
-                                    <p>preprint, 2021 / Yotam Erel, Sagi Jaffe-Dax, Yaara Yeshurun, Amit H. Bermano.</p>
+                                    <p>Preprint, 2021 / Yotam Erel, Sagi Jaffe-Dax, Yaara Yeshurun, Amit H. Bermano.</p>
                                     <a href="https://www.biorxiv.org/content/10.1101/2020.12.29.424683v3"> BioRxiv </a></br>
 									<a href="https://github.com/yoterel/STORM-Net"> Code </a><br>
 									<a href="assets/pdf/fnirs2022.pdf"> fnirs 2022 slides </a>
