--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="#">erelyotam@gmail.com</a></li>
                             </ul>
+                            <li><i class="fa fa-twitter-o"></i><span class="sr-only">Email:</span><a
+                                    href="https://twitter.com/yotam_erel">@yotam_erel</a></li>
+                            </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//aside-->
