--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                             Ramat-Aviv, 39040, Tel-Aviv </ul> </br>
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
                                     href="#">erelyotam@gmail.com</a></li>
-                            </ul>
-                            <li><i class="fa fa-twitter-o"></i><span class="sr-only">Email:</span><a
+                            </ul> </br>
+                            <li><i class="fa fa-twitter-o"></i><span class="sr-only">Twitter:</span><a
                                     href="https://twitter.com/yotam_erel">@yotam_erel</a></li>
                             </ul>
                         </div><!--//content-->
