--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
                 <section class="latest section">
                     <div class="section-inner">
                         <h2 class="heading">Publications</h2>
+                        <h4 class="heading">2024</h4>
+                        <div class="content">
+                            <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12"
+                                    href="https://yoterel.github.io/nepmap-project-page/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/casper.png"
+                                        alt="nepmap" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">Casper DPM: Cascaded Dynamic Projection Mapping onto Hands</h3>
+                                    <p>SIGGRAPH Asia, 2024 / Yotam Erel, Or Kozlovsky-Mordenfeld, Daisuke Iwai, Kosuke
+                                        Sato and Amit Bermano</p>
+                                    <a href="https://yoterel.github.io/casper-project-page/"> Project Page </a></br>
+                                    <a href="https://arxiv.org/abs/2409.04397"> ArXiv </a></br>
+                                    <a href="https://github.com/yoterel/casper"> Code </a>
+                                    <p></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                        </div><!--//content-->
                         <h4 class="heading">2023</h4>
                         <div class="content">
                             <hr class="divider" />
