fixes bug with casper link

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12"
-                                    href="https://yoterel.github.io/nepmap-project-page/" target="_blank">
+                                    href="https://yoterel.github.io/casper-project-page/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/casper.png"
-                                        alt="nepmap" />
+                                        alt="casperDPM" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title">Casper DPM: Cascaded Dynamic Projection Mapping onto Hands</h3>
+                                    <h3 class="title">Casper DPM: Cascaded Perceptual Dynamic Projection Mapping onto
+                                        Hands</h3>
                                     <p>SIGGRAPH Asia, 2024 / Yotam Erel, Or Kozlovsky-Mordenfeld, Daisuke Iwai, Kosuke
                                         Sato and Amit Bermano</p>
                                     <a href="https://yoterel.github.io/casper-project-page/"> Project Page </a></br>
