update about me

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     href="https://artmedical.com/">ART medical</a> for a couple of years mainly
                                 implementing all sorts of algorithms for their firmware using C/C++.</p>
                             <p>More importantly, I am fascinated by: brain-computer interfaces, game engines, physically
-                                based rendering and inverse rendering, projection mapping, AR/VR, procedural generation
+                                based rendering, inverse rendering, projection mapping, AR/VR, procedural generation
                                 programming. I also like hiking and bird watching :)</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
