update some info

--- a/index.html
+++ b/index.html
@@ -56,22 +56,45 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a phd candidate in the Visual Computing & Applied Geometry lab at Tel-Aviv
-                                University, supervised by <a href="https://www.cs.tau.ac.il/~amberman/"> Dr. Amit H.
-                                    Bermano</a>. Interested in computer graphics, video & 3D geometric applications of
-                                deep learning.</p>
-                            <p>Bachelor's from Faculty of Electric Engineering & Faculty of Exact Sciences (Physics) at
-                                Tel-Aviv University where I focused on semi-conductors, computer architecture and
-                                optics.</p>
-                            <p>Masters from Faculty of Electric Engineering & School of Computer Science at Tel-Aviv
-                                University, under super vision by Dr. Amit H. Bermano and Prof. Daniel Cohen-Or (mostly
-                                computer-vision projects)</p>
-                            <p>I also worked in <a href="https://www.valens.com/">Valens Semiconductors</a>, and in <a
-                                    href="https://artmedical.com/">ART medical</a> for a couple of years mainly
-                                implementing all sorts of algorithms for their firmware using C/C++.</p>
-                            <p>More importantly, I am fascinated by: brain-computer interfaces, game engines, physically
-                                based rendering, inverse rendering, projection mapping, AR/VR, procedural generation
-                                programming. I also like hiking and bird watching :)</p>
+                            <p>I am currently a PhD candidate in the Visual Computing & Applied Geometry lab at Tel-Aviv
+                                University, Israel, supervised by <a href="https://www.cs.tau.ac.il/~amberman/"> Prof.
+                                    Amit H.
+                                    Bermano</a>. Interested in computer graphics, augmented reality, and 3D applications
+                                of deep learning.</p>
+                            <p>I was a visitor research in Osaka University, Japan, collaborating with Prof. Daisuke
+                                Iwai, and currently doing an internship in MPI, Germany.</p>
+                            <p>Here are topics that really excite me:
+                                <br>
+                                special effects (VFX, SFX, CGI), light-matter interaction, physically-based rendering,
+                                projection-mapping, augmented
+                                reality, procedural generation programming, brain-computer interfaces.
+                            </p>
+                            <p>
+                                Here are topics I definitly want and need to study in more depth:
+                                <br>
+                                optimization, multilinear algebra, light transport theory.
+                            </p>
+                            <p>
+                                My current favorites:
+                                <br>
+                                Book: Moby-Dick
+                                <br>
+                                Movie: The Matrix
+                                <br>
+                                Anime: Steins;Gate
+                                <br>
+                                Game: Slay the Spire
+                                <br>
+                                Chess Openning: King's Gambit/French Defence
+                                <br>
+                                Food: Lasagne
+                                <br>
+                                Artist: René Magritte
+                                <br>
+                                Sport: Basketball
+                                <br>
+                                Fruit Color: Yellow
+                            </p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -261,7 +284,7 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Automatic, Real-Time Coding of Looking-While-Listening Children
                                         Videos Using Neural Networks, </h3>
-                                    <p> We created this infant eye tracker to be used by congnition labs around the
+                                    <p> We created this infant eye tracker to be used by cognition labs around the
                                         world, it was accepted in the ICIS2020 virtual conference as a poster. Check it
                                         out!
                                     <p> ICIS 2020 / Erel, Y., Potter, C.E., Jaffe-Dax, S., Lew-Williams, C., & Bermano,
