--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     Bermano</a>. Interested in computer graphics, augmented reality, and 3D applications
                                 of deep learning.</p>
                             <p>I was a visitor research in Osaka University, Japan, collaborating with Prof. Daisuke
-                                Iwai, and currently doing an internship in MPI, Germany.</p>
+                                Iwai, and was also an academic intern in MPI, Germany (in Prof. Christian Theobalt's research group).</p>
                             <p>Here are topics that really excite me:
                                 <br>
                                 special effects (VFX, SFX, CGI), light-matter interaction, physically-based rendering,
