--- a/index.html
+++ b/index.html
@@ -343,10 +343,9 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>School of
-                                    Computer Science</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>School of Electrical & Computer Engineering</li>
                             </ul>
-                            TAU, Tel-Aviv </ul>
+                            Tel Aviv University, Tel-Aviv </ul>
                             </li> </br>
                             Ramat-Aviv, 39040, Tel-Aviv </ul> </br>
                             <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a
